--- a/Savemydrone/app/src/main/res/layout/fragment_checklist.xml
+++ b/Savemydrone/app/src/main/res/layout/fragment_checklist.xml
@@ -9,16 +9,17 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Pre-flight safety checklist"
-        android:textSize="30dp"/>
+        android:textSize="30dp" />
 
     <LinearLayout
         android:id="@+id/airspaceCheck"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/checklistTitle">
+        android:layout_below="@id/checklistTitle"
+        android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/airspace_imageView"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@android:color/holo_green_dark" />
@@ -37,6 +38,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/wind_imageView"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@android:color/holo_red_dark" />
@@ -48,32 +50,14 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/cloudCheck"
+        android:id="@+id/daylightCheck"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/windCheck"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@android:color/holo_red_dark" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="Cloud" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/daylightCheck"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/cloudCheck"
-        android:orientation="horizontal">
-
-        <ImageView
+            android:id="@+id/daylight_imageView"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@android:color/holo_red_dark" />
@@ -84,30 +68,12 @@
             android:text="Daylight" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/visibilityCheck"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/daylightCheck"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@android:color/holo_red_dark" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="Visibility" />
-    </LinearLayout>
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/done_button"
-        android:text="You are safe to fly... You are not safe to fly, depending on calculation"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:text="You are safe to fly... You are not safe to fly, depending on calculation" />
 
     <Button
         android:id="@+id/done_button"
