--- a/Savemydrone/app/src/main/res/layout/fragment_checklist.xml
+++ b/Savemydrone/app/src/main/res/layout/fragment_checklist.xml
@@ -7,6 +7,7 @@
         android:id="@+id/checklistTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="Pre-flight safety checklist"
         android:textSize="30dp" />
@@ -16,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/checklistTitle"
+        android:layout_margin="30dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -27,7 +29,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="Airspace" />
+            android:layout_marginLeft="30dp"
+            android:gravity="center_vertical"
+            android:text="Airspace"
+            android:textSize="20dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -35,6 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/airspaceCheck"
+        android:layout_margin="30dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -46,7 +52,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="Wind" />
+            android:layout_marginLeft="30dp"
+            android:gravity="center_vertical"
+            android:text="Wind"
+            android:textSize="20dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -54,6 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/windCheck"
+        android:layout_margin="30dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -65,13 +75,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="Daylight" />
+            android:layout_marginLeft="30dp"
+            android:gravity="center_vertical"
+            android:text="Daylight"
+            android:textSize="20dp"/>
     </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/done_button"
+        android:layout_marginBottom="40dp"
         android:gravity="center"
         android:text="You are safe to fly... You are not safe to fly, depending on calculation" />
 
