--- a/Savemydrone/app/src/main/res/values/colors.xml
+++ b/Savemydrone/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="transparentAirports">#664488ff</color>
+
 </resources>
