Color changes and correcting the box we show the no fly in

--- a/Savemydrone/app/src/main/res/values/colors.xml
+++ b/Savemydrone/app/src/main/res/values/colors.xml
@@ -5,5 +5,8 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="transparentAirports">#664488ff</color>
+    <color name="transparentNoFlyZones">#66ffa500</color>
+
+
 
 </resources>
