--- a/Savemydrone/app/src/main/res/layout/fragment_flight_report.xml
+++ b/Savemydrone/app/src/main/res/layout/fragment_flight_report.xml
@@ -34,8 +34,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center
-                "
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
