correcting code logic in checklist

--- a/Savemydrone/app/src/main/res/layout/fragment_checklist.xml
+++ b/Savemydrone/app/src/main/res/layout/fragment_checklist.xml
@@ -82,12 +82,14 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/flightAdvice_TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/done_button"
-        android:layout_marginBottom="40dp"
+        android:layout_margin="10dp"
+        android:textSize="30dp"
         android:gravity="center"
-        android:text="You are safe to fly... You are not safe to fly, depending on calculation" />
+        android:text="Flight Advice - to be replaced in real-time" />
 
     <Button
         android:id="@+id/done_button"
