--- a/Savemydrone/app/src/main/res/layout/activity_maps.xml
+++ b/Savemydrone/app/src/main/res/layout/activity_maps.xml
@@ -4,88 +4,114 @@
     android:layout_height="match_parent">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="ca.awesome.travis.savemydrone.savemydrone.MapsActivity" />
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="ca.awesome.travis.savemydrone.savemydrone.MapsActivity" />
 
 
     <FrameLayout
         android:id="@+id/popup_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
-    />
+        android:layout_margin="20dp" />
 
     <LinearLayout
         android:id="@+id/weather_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
         android:layout_marginTop="50dp"
-        android:background="#61c9acad">
+        android:background="#61c9acad"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/wind"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:layout_gravity="center"
                 android:src="@drawable/wind" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="10kt"
-                android:textSize="20dp"/>
+                android:text="10kt G15kt"
+                android:textSize="20dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/windDirection"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:src="@drawable/arrow" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="from W"
+                android:textSize="20dp"
+
+                android:layout_gravity="bottom"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/cloud"
-                android:layout_width="100dp"
+                android:layout_width="80dp"
                 android:layout_height="100dp"
-                android:src="@drawable/cloud"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"/>
+                android:layout_gravity="center"
+                android:src="@drawable/cloud" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text=">1500ft"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/sunset"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:layout_gravity="center"
                 android:src="@drawable/sunset" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="in 1hr"
-                android:textSize="20dp"/>
+                android:text="in 3hr"
+                android:textSize="20dp" />
         </LinearLayout>
 
     </LinearLayout>
@@ -94,21 +120,20 @@
         android:id="@+id/bottom_details_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_margin="10dp"
         android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
         android:background="#000000"
         android:visibility="invisible">
 
 
         <TextView
+            android:id="@+id/bottom_instruction_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text=""
-            android:id="@+id/bottom_instruction_textview"
-            android:textColor="#ffffff"
-            />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#ffffff" />
     </RelativeLayout>
 
 
