--- a/Savemydrone/app/src/main/res/layout/fragment_checklist.xml
+++ b/Savemydrone/app/src/main/res/layout/fragment_checklist.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/checklistTitle"
-        android:layout_margin="30dp"
+        android:layout_margin="20dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/airspaceCheck"
-        android:layout_margin="30dp"
+        android:layout_margin="20dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -59,18 +59,41 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/daylightCheck"
+        android:id="@+id/cloudCheck"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/windCheck"
-        android:layout_margin="30dp"
+        android:layout_margin="20dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/cloud_imageView"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@android:color/holo_green_dark" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginLeft="30dp"
+            android:gravity="center_vertical"
+            android:text="Cloud"
+            android:textSize="20dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/daylightCheck"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/cloudCheck"
+        android:layout_margin="20dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/daylight_imageView"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@android:color/holo_red_dark" />
+            android:background="@android:color/holo_green_dark" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -86,10 +109,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/done_button"
+
         android:layout_margin="10dp"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:gravity="center"
-        android:text="Flight Advice - to be replaced in real-time" />
+        android:text="The wind is too strong to fly today."
+        android:textColor="@android:color/holo_red_dark"
+        android:layout_weight="1"/>
 
     <Button
         android:id="@+id/done_button"
