--- a/Savemydrone/app/src/main/res/layout/fragment_checklist.xml
+++ b/Savemydrone/app/src/main/res/layout/fragment_checklist.xml
@@ -2,126 +2,212 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff">
+    ​
+    ​
+<TextView
+    android:id="@+id/checklistTitle"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:gravity="center"
+    android:text="Pre-flight safety checklist"
+    android:textSize="30dp" />
+    ​
+    ​
+<LinearLayout
+android:id="@+id/airspaceCheck"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_below="@id/checklistTitle"
 
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+android:orientation="horizontal">
+​
+​
+<ImageView
+    android:id="@+id/airspace_imageView"
+    android:layout_width="30dp"
+    android:layout_height="30dp"
+    android:background="@android:color/holo_green_dark" />
+​
+​
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    ​
     <TextView
-        android:id="@+id/checklistTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="Pre-flight safety checklist"
-        android:textSize="30dp" />
-
-    <LinearLayout
-        android:id="@+id/airspaceCheck"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/checklistTitle"
-        android:layout_margin="20dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/airspace_imageView"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@android:color/holo_green_dark" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="30dp"
-            android:gravity="center_vertical"
-            android:text="Airspace"
-            android:textSize="20dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/windCheck"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/airspaceCheck"
-        android:layout_margin="20dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/wind_imageView"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@android:color/holo_red_dark" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="30dp"
-            android:gravity="center_vertical"
-            android:text="Wind"
-            android:textSize="20dp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/cloudCheck"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/windCheck"
-        android:layout_margin="20dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/cloud_imageView"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@android:color/holo_green_dark" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="30dp"
-            android:gravity="center_vertical"
-            android:text="Cloud"
-            android:textSize="20dp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/daylightCheck"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/cloudCheck"
-        android:layout_margin="20dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/daylight_imageView"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@android:color/holo_green_dark" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginLeft="30dp"
-            android:gravity="center_vertical"
-            android:text="Daylight"
-            android:textSize="20dp"/>
-    </LinearLayout>
-
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginLeft="30dp"
+        android:gravity="center_vertical"
+        android:text="Airspace"
+        android:textSize="20dp" />
     <TextView
-        android:id="@+id/flightAdvice_TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/done_button"
+        android:layout_marginLeft="30dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/secondaryText"
+        android:text="You are clear of prohibited airspace."
+        android:textSize="15dp" />
+</LinearLayout>
+</LinearLayout>
+    ​
+    ​
+<LinearLayout
+android:id="@+id/windCheck"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_below="@id/airspaceCheck"
 
-        android:layout_margin="10dp"
-        android:textSize="25dp"
-        android:gravity="center"
-        android:text="The wind is too strong to fly today."
-        android:textColor="@android:color/holo_red_dark"
-        android:layout_weight="1"/>
-
-    <Button
-        android:id="@+id/done_button"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+android:orientation="horizontal">
+​
+​
+<ImageView
+    android:id="@+id/wind_imageView"
+    android:layout_width="30dp"
+    android:layout_height="30dp"
+    android:adjustViewBounds="true"
+    android:background="@android:color/holo_green_dark" />
+​
+​
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    ​
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginLeft="30dp"
+        android:gravity="center_vertical"
+        android:text="Wind"
+        android:textSize="20dp" />
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="DONE" />
+        android:layout_marginLeft="30dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/secondaryText"
+        android:text="There is no signifant wind in your area."
+        android:textSize="15dp" />
+</LinearLayout>
+</LinearLayout>
+    ​
+    ​
+<LinearLayout
+android:id="@+id/cloudCheck"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_below="@id/windCheck"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+android:orientation="horizontal">
+​
+​
+<ImageView
+    android:id="@+id/cloud_imageView"
+    android:layout_width="30dp"
+    android:layout_height="30dp"
+    android:background="@android:color/holo_green_dark" />
+​
+​
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    ​
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginLeft="30dp"
+        android:gravity="center_vertical"
+        android:text="Cloud"
+        android:textSize="20dp" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/secondaryText"
+        android:text="There are no low clouds that could interfere with line of sight."
+        android:textSize="15dp" />
+</LinearLayout>
+</LinearLayout>
+    ​
+    ​
+<LinearLayout
+android:id="@+id/daylightCheck"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_below="@id/cloudCheck"
 
-</RelativeLayout>
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:orientation="horizontal">
+​
+​
+<ImageView
+    android:id="@+id/daylight_imageView"
+    android:layout_width="30dp"
+    android:layout_height="30dp"
+    android:background="@android:color/holo_green_dark" />
+​
+​
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    ​
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginLeft="30dp"
+        android:gravity="center_vertical"
+        android:text="Daylight"
+        android:textSize="20dp" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/secondaryText"
+        android:text="There is adequate daylight to complete your flight."
+        android:textSize="15dp" />
+</LinearLayout>
+</LinearLayout>
+    ​
+    ​
+<TextView
+android:id="@+id/flightAdvice_TextView"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_above="@+id/done_button"
+android:layout_margin="10dp"
+android:textSize="22dp"
+android:gravity="center"
+android:text="All conditions clear. You are ready for takeoff."
+android:textColor="@android:color/holo_green_dark"
+android:layout_weight="1"/>
+    ​
+    ​
+<Button
+android:id="@+id/done_button"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_alignParentBottom="true"
+android:text="DONE" />
+    ​
+    </RelativeLayout>
